ログイン時の要求パラメータをinlineobjectからloginreqに変更
