# server/simple_item_manager/controllers/user_controller.py
@@ -1,7 +1,7 @@
 import connexion
 import six
 
-from simple_item_manager.models.inline_object import InlineObject  # noqa: E501
+from simple_item_manager.models.login_req import LoginReq  # noqa: E501
 from simple_item_manager.models.user import User  # noqa: E501
 from simple_item_manager import util
 
@@ -34,16 +34,16 @@ def get_user_list(ids=None):  # noqa: E501
     return 'do some magic!'
 
 
-def login(inline_object):  # noqa: E501
+def login(login_req):  # noqa: E501
     """ログイン
 
     NFCタグのシリアル番号でログインします。 # noqa: E501
 
-    :param inline_object: 
-    :type inline_object: dict | bytes
+    :param login_req: 
+    :type login_req: dict | bytes
 
     :rtype: None
     """
     if connexion.request.is_json:
-        inline_object = InlineObject.from_dict(connexion.request.get_json())  # noqa: E501
+        login_req = LoginReq.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
