# server/simple_item_manager/models/__init__.py
@@ -4,7 +4,7 @@
 from __future__ import absolute_import
 # import models into model package
 from simple_item_manager.models.footprint import Footprint
-from simple_item_manager.models.inline_object import InlineObject
 from simple_item_manager.models.item import Item
+from simple_item_manager.models.login_req import LoginReq
 from simple_item_manager.models.usage import Usage
 from simple_item_manager.models.user import User
