# server/simple_item_manager/models/login_req.py
@@ -1,0 +1,66 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from simple_item_manager.models.base_model_ import Model
+from simple_item_manager import util
+
+
+class LoginReq(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, serial_no=None):  # noqa: E501
+        """LoginReq - a model defined in OpenAPI
+
+        :param serial_no: The serial_no of this LoginReq.  # noqa: E501
+        :type serial_no: str
+        """
+        self.openapi_types = {
+            'serial_no': str
+        }
+
+        self.attribute_map = {
+            'serial_no': 'serialNo'
+        }
+
+        self._serial_no = serial_no
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'LoginReq':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The LoginReq of this LoginReq.  # noqa: E501
+        :rtype: LoginReq
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def serial_no(self):
+        """Gets the serial_no of this LoginReq.
+
+        NFCタグのシリアル番号  # noqa: E501
+
+        :return: The serial_no of this LoginReq.
+        :rtype: str
+        """
+        return self._serial_no
+
+    @serial_no.setter
+    def serial_no(self, serial_no):
+        """Sets the serial_no of this LoginReq.
+
+        NFCタグのシリアル番号  # noqa: E501
+
+        :param serial_no: The serial_no of this LoginReq.
+        :type serial_no: str
+        """
+
+        self._serial_no = serial_no
